--- a/LeagueScheduler31/Web.config
+++ b/LeagueScheduler31/Web.config
@@ -10,8 +10,8 @@
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-LeagueScheduler-20131119024250.mdf;Initial Catalog=aspnet-LeagueScheduler-20131119024250;Integrated Security=True" providerName="System.Data.SqlClient"/>-->
-    <!--<add name="LeagueLineupDB" connectionString="Data Source=.\sqlexpress;Initial Catalog=LeagueLineupDB;Integrated Security=True" providerName="System.Data.SqlClient"/>-->
-    <add name="LeagueLineupDB" connectionString="Data Source=tcp:cslk2v2nrr.database.windows.net,1433;Initial Catalog=elite-schedule;User ID=steveadmin@cslk2v2nrr;Password=Pass12!!" providerName="System.Data.SqlClient"/>
+    <add name="LeagueLineupDB" connectionString="Data Source=.\sqlexpress;Initial Catalog=LeagueLineupDB;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <!--<add name="LeagueLineupDB" connectionString="Data Source=tcp:cslk2v2nrr.database.windows.net,1433;Initial Catalog=elite-schedule;User ID=steveadmin@cslk2v2nrr;Password=Pass12!!" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
   <appSettings>   
     <add key="webpages:Version" value="3.0.0.0"/>
