--- a/LeagueScheduler31/Web.config
+++ b/LeagueScheduler31/Web.config
@@ -15,6 +15,7 @@
   </connectionStrings>
   <appSettings>
     <add key="environment" value="dev"/>
+    <add key="forceSSL" value="false"/>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
