--- a/LeagueScheduler31/packages.config
+++ b/LeagueScheduler31/packages.config
@@ -39,5 +39,6 @@
   <package id="RequireJS" version="2.1.9" targetFramework="net45" />
   <package id="RequireJS.Text" version="2.0.7" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
+  <package id="showdown" version="0.9" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
