--- a/LeagueScheduler31/Web.config
+++ b/LeagueScheduler31/Web.config
@@ -40,7 +40,9 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
     <staticContent>
+      <remove fileExtension=".woff"/>
       <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+      <remove fileExtension=".svg"/>
       <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
     </staticContent>
   </system.webServer>
