--- a/LeagueScheduler31/bower.json
+++ b/LeagueScheduler31/bower.json
@@ -8,7 +8,7 @@
     "angular-route": "~1.3.0",
     "angular-touch": "~1.3.0",
     "angular-ui-calendar": "~0.8.1",
-    "angular-ui-grid": "~3.0.0-rc.12",
+    "angular-ui-grid": "~3.0.0-RC.18",
     "angular-ui-router": "~0.2.11",
     "angular-ui-utils": "~0.1.1",
     "bootstrap": "~3.1.1",
