--- a/LeagueScheduler31/bower.json
+++ b/LeagueScheduler31/bower.json
@@ -2,14 +2,16 @@
   "name": "pandora-welcome-home",
   "private": "true",
   "dependencies": {
-    "angular": "~1.3.0",
-    "angular-animate": "~1.3.0",
+    "angular": "~1.3.8",
+    "angular-animate": "~1.3.8",
     "angular-bootstrap": "~0.11.2",
-    "angular-route": "~1.3.0",
-    "angular-touch": "~1.3.0",
+    "angular-route": "~1.3.8",
+    "angular-sanitize": "~1.3.8",
+    "angular-touch": "~1.3.8",
     "angular-ui-calendar": "~0.8.1",
     "angular-ui-grid": "~3.0.0-RC.18",
     "angular-ui-router": "~0.2.11",
+    "angular-ui-select": "~0.9.5",
     "angular-ui-utils": "~0.1.1",
     "bootstrap": "~3.1.1",
     "jquery": "~1.11.0",
