--- a/LeagueScheduler31/Web.config
+++ b/LeagueScheduler31/Web.config
@@ -12,6 +12,7 @@
     <add name="LeagueLineupDB" connectionString="Data Source=.\sqlexpress;Initial Catalog=elite-schedule;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!--<add name="LeagueLineupDB" connectionString="Data Source=tcp:cslk2v2nrr.database.windows.net,1433;Initial Catalog=elite-schedule;User ID=steveadmin@cslk2v2nrr;Password=Pass12!!" providerName="System.Data.SqlClient"/>-->
     <add name="elite-schedule-auth-db" connectionString="Data Source=.\sqlexpress;Initial Catalog=elite-schedule-auth;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="elite-schedule-auth-db" connectionString="Data Source=tcp:cslk2v2nrr.database.windows.net,1433;Initial Catalog=elite-schedule-auto;User ID=steveadmin@cslk2v2nrr;Password=Pass12!!" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="environment" value="dev" />
